# Tax-LLM

./: .gitignore  AGENTS.md  README.md
backend/: README.md  pyproject.toml
backend/data/auth/: sessions.json  users.json
backend/data/authority_corpus/: authorities.json
backend/data/corpus/cases/: cottage_savings.txt  gregory_helvering.md  gregory_v_helvering.md  king_enterprises.md  letulle.md  minnesota_tea.md  morris_trust.md
backend/data/corpus/code/: asset_allocation.json  attribute_preservation_overlay.json  contributions_partnerships.md  debt_earnout_overlay.json  reorg_core.md  section_1060.md  section_279.md  section_336e.md  section_338.md  section_351.md  section_354.md  section_355.md  section_356.md  section_361.md  section_368.md  section_382.md  section_382.txt  section_383.md  section_384.md  section_704c.md  section_707.md  section_752.md
backend/data/corpus/forms/: form_8023.md  form_8594.md  form_8883.md  w8bene.md
backend/data/corpus/internal/: rollover_governance.md  state_transfer_checklist.txt
backend/data/corpus/irs_guidance/: financing_guidance.json  (+5 more)
backend/data/ingestion/: transactional_tax_regimes_v2.json  transactional_tax_wedge_v1.json
backend/data/matters/: 1d876c32-8d6a-45c2-943f-7da7d41f11f2.json
backend/data/seed/: demo_scenario.json
backend/scripts/: ingest_public_authorities.py
backend/src/tax_llm/: __init__.py
backend/src/tax_llm_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_analysis_service.py  test_api.py  test_corpus.py  test_document_extraction.py  test_paths.py
(+132 files in other folders)
